# B-A-P

./: README.md  option 1.txt  option 2.txt
ai-analytics-platform/: .gitignore  pyproject.toml
ai-analytics-platform/.github/workflows/: ci.yml
ai-analytics-platform/src/: main.py
ai-analytics-platform/src/ai/: __init__.py  insights_generator.py
ai-analytics-platform/src/api/: exception_handlers.py
ai-analytics-platform/src/api/middleware/: auth.py
ai-analytics-platform/src/api/routes/: analytics.py  data.py
ai-analytics-platform/src/config/: settings.py
ai-analytics-platform/src/core/: cache.py  database.py  security.py
ai-analytics-platform/src/etl/: pipeline.py
ai-analytics-platform/src/models/: analytics_models.py
ai-analytics-platform/src/utils/: performance.py
ai-analytics-platform/tests/: conftest.py  test_concurrency.py  test_etl.py  test_performance.py
helm/: values.yaml
helm/templates/: deployment.yaml
src/ai/: forecast_engine.py  gpt_client.py
src/api/routes/: pipeline.py
src/utils/: logger.py  metrics.py
tests/: test_api.py
